2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged feature from trunk

	* include/functions_visual_map.php: added links to services in the items in
	the view of visualmap.

2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_visual_map.php: added lost safe_ouput in the extract
	DB fields.

2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_visual_map.php: added function "createInternalNameItem"
	and "get_items_parents".
	
	*include/ajax/visual_console_builder.ajax.php, 
	godmode/reporting/visual_console_builder.editor.php: changed the method to
	show items without name in visualmap as parents in the selectbox.

2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/ajax/visual_console_builder.ajax.php: fixed the position of
	items "icons".

2011-02-16 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/functions_db.php: fixed check "<>" in other case as the ajax
	calls in the visual map.
	
2011-02-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* godmode/users/user_list.php: If user is not admin then don't 
	display users of others groups.

	Fixes: #3175670	

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/javascript/pandora.js, operation/agentes/ver_agente.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: fixed when the agent haven't
	any module and fixed when to try to create items without modules selected.

2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/visual_console/render_view.php: fixed the link to edit
	visual console.

2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* godmode/users/user_list.php: Only display administrator users if
	current user is administrator too. 