@@ -157,7 +157,12 @@ function print_menu (&$menu) {
 					$extensionInMenu = '';
 				}
 				
-				$submenu_output .= '<a href="index.php?'.$extensionInMenu.'sec='.$secUrl.'&amp;sec2='.$subsec2.($main["refr"] ? '&amp;refr=0' : '').$link_add.'">'.$sub["text"].'</a>';
+				if (isset ($sub["title"])) {
+					$title = ' title="' . $sub["title"] . ' "';
+				} else {
+					$title = '';
+				}
+				$submenu_output .= '<a href="index.php?'.$extensionInMenu.'sec='.$secUrl.'&amp;sec2='.$subsec2.($main["refr"] ? '&amp;refr=0' : '').$link_add.'"' . $title . '>'.$sub["text"].'</a>';
 				$submenu_output .= '</li>';
 			}
 		}
